--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Triad</title>
+    <link rel="stylesheet" href= "CSS.css"/>
     <link rel="website icon" type="png" href="https://media.istockphoto.com/id/1295630366/vector/triple-yin-yang-symbol.jpg?s=1024x1024&w=is&k=20&c=2GlocRru55861Xldd9-wpJOh8SqlgBXVY0VuRgV5B2Y=">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
